# VoidEngine

./: .gitignore  CMakeLists.txt  README.md  notes.txt
Shaders/: Point_Light.frag  Point_Light.vert  Simple_Flat.frag  Simple_Flat.vert  Simple_shader.frag  Simple_shader.vert
Source/: Common.hpp  VoidEngine.cpp  VoidEngine.hpp
Source/Components/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.hpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  Model.cpp  Model.hpp  PointLight.cpp  PointLight.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.hpp  Transform.cpp  Transform.hpp  Vertex.cpp  Vertex.hpp  Window.hpp
Source/Core/: Buffer.cpp  Buffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp
Source/Managers/: CameraManager.cpp  CameraManager.hpp  InputManager.cpp  InputManager.hpp  LightSourceManager.cpp  LightSourceManager.hpp  ModelManager.cpp  ModelManager.hpp  RenderManager.cpp  RenderManager.hpp  SceneManager.cpp  SceneManager.hpp  UIManager.cpp  UIManager.hpp  WindowManager.cpp  WindowManager.hpp
Testbeds/: Test1.cpp  Test2.cpp
